# lisp

./: .pre-commit-config.yaml  Cargo.toml  input.lisp
src/: main.rs
src/core/: mod.rs
src/env/: mathop.rs  mod.rs  predicates.rs
src/env/predicates/: mod.rs  tests.rs
src/env/special_forms/: mod.rs  tests.rs
src/eval/: builtin.rs  mod.rs  tests.rs
src/lexer/: mod.rs  tests.rs
src/parser/: atom.rs  grammar.pest  mod.rs  rewrite.rs  symbol.rs  tests.rs
