[package]
name = "lisp"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Marczyński <marczynski.bartosz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
nom = "7.1.3"
rstest = "0.14.0"
thiserror = "1.0.38"
